--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>4</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -142,7 +142,7 @@
          <item>
           <widget class="QToolBox" name="toolBox">
            <property name="currentIndex">
-            <number>1</number>
+            <number>3</number>
            </property>
            <widget class="QWidget" name="page">
             <property name="geometry">
@@ -208,8 +208,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>356</width>
-              <height>436</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -378,8 +378,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>241</width>
-              <height>197</height>
+              <width>356</width>
+              <height>436</height>
              </rect>
             </property>
             <attribute name="label">
@@ -395,7 +395,7 @@
                 <double>1.000000000000000</double>
                </property>
                <property name="maximum">
-                <double>1000.000000000000000</double>
+                <double>10000.000000000000000</double>
                </property>
                <property name="singleStep">
                 <double>10.000000000000000</double>
@@ -567,7 +567,7 @@
             <number>2</number>
            </property>
            <property name="currentIndex">
-            <number>3</number>
+            <number>2</number>
            </property>
            <widget class="QWidget" name="CCS200">
             <property name="geometry">
@@ -721,8 +721,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>240</width>
-              <height>291</height>
+              <width>356</width>
+              <height>348</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1933,6 +1933,98 @@
               <property name="checkable">
                <bool>true</bool>
               </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QGroupBox" name="groupBox_12">
+              <property name="title">
+               <string>Laser_spectra</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_19">
+               <item row="0" column="0">
+                <widget class="QGroupBox" name="groupBox_13">
+                 <property name="title">
+                  <string>Laser_wavelength</string>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_17">
+                  <item>
+                   <layout class="QGridLayout" name="gridLayout_18">
+                    <item row="0" column="2">
+                     <widget class="QLabel" name="label_33">
+                      <property name="text">
+                       <string>Step</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="1">
+                     <widget class="QLabel" name="label_34">
+                      <property name="text">
+                       <string>End</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="0" column="0">
+                     <widget class="QLabel" name="label_35">
+                      <property name="text">
+                       <string>Start</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QSpinBox" name="meas_laser_spectra_start">
+                      <property name="minimum">
+                       <number>680</number>
+                      </property>
+                      <property name="maximum">
+                       <number>1299</number>
+                      </property>
+                      <property name="value">
+                       <number>850</number>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="1">
+                     <widget class="QSpinBox" name="meas_laser_spectra_end">
+                      <property name="minimum">
+                       <number>681</number>
+                      </property>
+                      <property name="maximum">
+                       <number>1300</number>
+                      </property>
+                      <property name="value">
+                       <number>1300</number>
+                      </property>
+                     </widget>
+                    </item>
+                    <item row="1" column="2">
+                     <widget class="QSpinBox" name="meas_laser_spectra_step">
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>620</number>
+                      </property>
+                      <property name="displayIntegerBase">
+                       <number>10</number>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="meas_laser_spectra_go">
+                 <property name="text">
+                  <string>Start</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
            </layout>
