--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -149,8 +149,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>224</width>
-              <height>148</height>
+              <width>196</width>
+              <height>115</height>
              </rect>
             </property>
             <attribute name="label">
@@ -208,8 +208,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>294</width>
-              <height>198</height>
+              <width>259</width>
+              <height>155</height>
              </rect>
             </property>
             <attribute name="label">
@@ -306,8 +306,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>143</height>
+              <width>255</width>
+              <height>121</height>
              </rect>
             </property>
             <attribute name="label">
@@ -378,8 +378,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>285</width>
-              <height>272</height>
+              <width>356</width>
+              <height>436</height>
              </rect>
             </property>
             <attribute name="label">
@@ -574,8 +574,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>259</width>
-              <height>162</height>
+              <width>229</width>
+              <height>122</height>
              </rect>
             </property>
             <attribute name="label">
@@ -679,8 +679,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>186</width>
-              <height>86</height>
+              <width>174</width>
+              <height>70</height>
              </rect>
             </property>
             <attribute name="label">
@@ -721,8 +721,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>293</width>
-              <height>394</height>
+              <width>356</width>
+              <height>348</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1087,7 +1087,7 @@
                   <set>Qt::ImhPreferNumbers</set>
                  </property>
                  <property name="text">
-                  <string>15e-9</string>
+                  <string>15e-6</string>
                  </property>
                 </widget>
                </item>
@@ -1100,7 +1100,7 @@
                   <number>10000</number>
                  </property>
                  <property name="value">
-                  <number>100</number>
+                  <number>1</number>
                  </property>
                 </widget>
                </item>
@@ -1118,6 +1118,20 @@
                  </property>
                 </widget>
                </item>
+               <item row="2" column="1">
+                <widget class="QCheckBox" name="pico_photon_counter">
+                 <property name="text">
+                  <string>PC</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="1">
+                <widget class="QLineEdit" name="pico_photon_counter_treshold">
+                 <property name="text">
+                  <string>-0.001</string>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </item>
             </layout>
@@ -1127,8 +1141,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>312</width>
-              <height>412</height>
+              <width>356</width>
+              <height>348</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1356,8 +1370,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>178</width>
-              <height>138</height>
+              <width>156</width>
+              <height>111</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1941,6 +1955,105 @@
                <string>Laser_spectra</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_19">
+               <item row="3" column="0">
+                <layout class="QHBoxLayout" name="horizontalLayout_14">
+                 <item>
+                  <widget class="QCheckBox" name="meas_laser_spectra_track">
+                   <property name="text">
+                    <string>track</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QComboBox" name="meas_laser_spectra_track_channel">
+                   <item>
+                    <property name="text">
+                     <string>A</string>
+                    </property>
+                   </item>
+                   <item>
+                    <property name="text">
+                     <string>B</string>
+                    </property>
+                   </item>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+               <item row="1" column="0">
+                <widget class="QTableWidget" name="meas_laser_spectra_probe">
+                 <attribute name="horizontalHeaderCascadingSectionResizes">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="horizontalHeaderStretchLastSection">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="verticalHeaderShowSortIndicator" stdset="0">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="verticalHeaderStretchLastSection">
+                  <bool>false</bool>
+                 </attribute>
+                 <row>
+                  <property name="text">
+                   <string>BG</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>signal</string>
+                  </property>
+                 </row>
+                 <column>
+                  <property name="text">
+                   <string>X</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Y</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Z</string>
+                  </property>
+                 </column>
+                 <item row="0" column="0">
+                  <property name="text">
+                   <string>0</string>
+                  </property>
+                 </item>
+                 <item row="0" column="1">
+                  <property name="text">
+                   <string>0</string>
+                  </property>
+                 </item>
+                 <item row="0" column="2">
+                  <property name="text">
+                   <string>0</string>
+                  </property>
+                 </item>
+                 <item row="1" column="0">
+                  <property name="text">
+                   <string>50</string>
+                  </property>
+                 </item>
+                 <item row="1" column="1">
+                  <property name="text">
+                   <string>50</string>
+                  </property>
+                 </item>
+                 <item row="1" column="2">
+                  <property name="text">
+                   <string>50</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
                <item row="0" column="0">
                 <widget class="QGroupBox" name="groupBox_13">
                  <property name="title">
@@ -2014,20 +2127,13 @@
                  </layout>
                 </widget>
                </item>
-               <item row="2" column="0">
+               <item row="6" column="0">
                 <widget class="QPushButton" name="meas_laser_spectra_go">
                  <property name="text">
                   <string>Start</string>
                  </property>
                  <property name="checkable">
                   <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0">
-                <widget class="QCheckBox" name="meas_laser_spectra_track">
-                 <property name="text">
-                  <string>track</string>
                  </property>
                 </widget>
                </item>
@@ -2352,7 +2458,7 @@
      <x>0</x>
      <y>0</y>
      <width>688</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
