--- a/microV.ui
+++ b/microV.ui
@@ -1126,7 +1126,7 @@
                 </widget>
                </item>
                <item row="3" column="1">
-                <widget class="QLineEdit" name="pico_photon_counter_treshold">
+                <widget class="QLineEdit" name="pico_photon_counter_threshold">
                  <property name="text">
                   <string>-0.001</string>
                  </property>
@@ -1803,12 +1803,79 @@
              </layout>
             </item>
             <item>
+             <widget class="QComboBox" name="fastScan_pattern">
+              <item>
+               <property name="text">
+                <string>single</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Zigzag</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item>
              <widget class="QPushButton" name="fast3DScan">
               <property name="text">
                <string>FastScan</string>
               </property>
               <property name="checkable">
                <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <layout class="QGridLayout" name="gridLayout_26">
+              <item row="0" column="1">
+               <widget class="QDoubleSpinBox" name="scan3D_threshold_rel">
+                <property name="toolTip">
+                 <string>threshold_rel</string>
+                </property>
+                <property name="minimum">
+                 <double>0.010000000000000</double>
+                </property>
+                <property name="value">
+                 <double>0.500000000000000</double>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QSpinBox" name="scan3D_num_peaks">
+                <property name="toolTip">
+                 <string>num_peaks</string>
+                </property>
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>10</number>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="2">
+               <widget class="QSpinBox" name="Scan3D_min_distance">
+                <property name="toolTip">
+                 <string>min_distance</string>
+                </property>
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>999</number>
+                </property>
+                <property name="value">
+                 <number>1</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <widget class="QPushButton" name="scan3D_peak_find">
+              <property name="text">
+               <string>PeakFind</string>
               </property>
              </widget>
             </item>
@@ -2585,6 +2652,36 @@
                 <string>NP4</string>
                </property>
               </row>
+              <row>
+               <property name="text">
+                <string>NP5</string>
+               </property>
+              </row>
+              <row>
+               <property name="text">
+                <string>NP6</string>
+               </property>
+              </row>
+              <row>
+               <property name="text">
+                <string>NP7</string>
+               </property>
+              </row>
+              <row>
+               <property name="text">
+                <string>NP8</string>
+               </property>
+              </row>
+              <row>
+               <property name="text">
+                <string>NP9</string>
+               </property>
+              </row>
+              <row>
+               <property name="text">
+                <string>NP10</string>
+               </property>
+              </row>
               <column>
                <property name="text">
                 <string>X</string>
@@ -2675,6 +2772,96 @@
                 <string>nan</string>
                </property>
               </item>
+              <item row="5" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="5" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="5" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="6" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="6" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="6" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="7" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="7" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="7" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="8" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="8" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="8" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="9" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="9" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="9" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="10" column="0">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="10" column="1">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
+              <item row="10" column="2">
+               <property name="text">
+                <string>nan</string>
+               </property>
+              </item>
              </widget>
             </item>
             <item row="2" column="0">
@@ -2701,7 +2888,11 @@
                </widget>
               </item>
               <item row="2" column="2">
-               <widget class="QDoubleSpinBox" name="n_meas_laser_spectra_Z_offset"/>
+               <widget class="QDoubleSpinBox" name="n_meas_laser_spectra_Z_offset">
+                <property name="minimum">
+                 <double>-99.000000000000000</double>
+                </property>
+               </widget>
               </item>
               <item row="0" column="1">
                <widget class="QLabel" name="label_41">
@@ -2737,7 +2928,7 @@
               <item row="3" column="0" colspan="3">
                <widget class="QLabel" name="n_meas_laser_spectra_Z_interface">
                 <property name="text">
-                 <string>TextLabel</string>
+                 <string>nan</string>
                 </property>
                </widget>
               </item>
