--- a/microV.ui
+++ b/microV.ui
@@ -31,7 +31,7 @@
         <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex">
-        <number>6</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="Laser">
         <attribute name="title">
@@ -2925,10 +2925,26 @@
                 </property>
                </widget>
               </item>
-              <item row="3" column="0" colspan="3">
-               <widget class="QLabel" name="n_meas_laser_spectra_Z_interface">
+              <item row="3" column="0">
+               <widget class="QLabel" name="labela">
                 <property name="text">
                  <string>nan</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QDoubleSpinBox" name="n_meas_laser_spectra_Z_interface">
+                <property name="decimals">
+                 <number>4</number>
+                </property>
+                <property name="minimum">
+                 <double>-3.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>100.000000000000000</double>
+                </property>
+                <property name="value">
+                 <double>0.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -3009,6 +3025,12 @@
             </item>
             <item row="3" column="0">
              <widget class="QPushButton" name="n_meas_laser_spectra_set_point">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                <horstretch>3</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
                <string>Set Point</string>
               </property>
@@ -3023,7 +3045,7 @@
         </layout>
        </widget>
       </widget>
-      <widget class="QSplitter" name="splitter_2">
+      <widget class="QSplitter" name="view_splitter">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
